kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: study-notion
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: studynotion.store
      http:
        paths:
          - path: /back
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
